# cumulocity-remote-access-cloud-http-proxy

./: .dockerignore  .releaserc.json  CHANGELOG.md  README.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: main-ci.yml  semantic-release.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build-release.sh  cumulocity.json  package-lock.json  package.json  tsconfig.json
backend/src/: agents.ts  body.rs  c8y.rs  config.rs  connection-details.ts  connection-handler.ts  connection_details.rs  cookie-parse.d.ts  header-adjustment.ts  header_adjustment.rs  health.rs  index.ts  main.rs  model.rs  model.ts  pool.rs  proxy.rs  proxy.ts  rca-connection-server.ts  rca-server-store.ts  rewrite.rs  statistics.rs  statistics.ts  tls.rs  tunnel.rs  xsrf.rs
frontend/: angular.json  cumulocity.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: bootstrap.ts  i18n.ts  main.ts
frontend/src/app/: app.config.ts  app.module.ts
frontend/src/app/cloud-http-proxy/: cloud-http-proxy-available.ts  cloud-http-proxy-tab.factory.ts  cloud-http-proxy.component.html  cloud-http-proxy.component.ts  cloud-http-proxy.model.ts  cloud-http-proxy.module.ts  proxy-tracking.service.ts
frontend/src/app/cloud-http-proxy/cloud-http-proxy-path/: cloud-http-proxy-path.component.html  cloud-http-proxy-path.component.ts  remote-access.service.ts
frontend/src/app/cloud-http-proxy/cloud-http-proxy-settings/: cloud-http-proxy-settings.component.html  cloud-http-proxy-settings.component.ts
frontend/src/app/unlock-passthrough-feature/: unlock-passthrough-feature.module.ts
